--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ footer {
   flex-direction: row;
   justify-content: flex-end;
   width: 7.1rem;
+
 }
 
 .shop {
@@ -171,12 +172,13 @@ footer {
   border: black solid 2px;
   padding-top: 1rem;
   list-style-type: none;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .shop--li {
   list-style-type: none;
   margin: .5rem 0;
+  justify-content: flex-end;
 }
 
 .about {
@@ -187,12 +189,13 @@ footer {
   border: black solid 2px;
   padding-top: 1rem;
   list-style-type: none;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .about--us {
   list-style-type: none;
   margin: .5rem 0;
+  justify-content: flex-end;
 }
 
 .style {
@@ -203,12 +206,13 @@ footer {
   border: black solid 2px;
   padding-top: 1rem;
   list-style-type: none;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .style--guide {
   list-style-type: none;
   margin: .5rem 0;
+  justify-content: flex-end;
 }
 
 .help {
@@ -219,10 +223,11 @@ footer {
   border: black solid 2px;
   padding-top: 1rem;
   list-style-type: none;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .help--li {
   list-style-type: none;
   margin: .5rem 0;
+  justify-content: flex-end;
 }
