--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@
   margin: 0 auto;
 }
 
+img {
+  max-width: 100%;
+}
+
+.container {
+  width: 100%;
+  max-width: 60rem;
+  margin: auto;
+  overflow: auto;
+}
+
 header {
   background-color: #f5672b;
   display: flex;
@@ -36,100 +47,83 @@ header {
   color: white;
   font-family: Verdana;
   font-size: .85rem;
-
 }
 
+
+
+
 nav {
-  background-color: yellow;
   display: flex;
-
-
+  align-items: center;
 }
 
 .logo {
-  transform: scale(.5);
   position: relative;
+  margin-right: 0;
 }
 
 .tie-select{
   display: flex;
-  max-height: inherit;
+  margin: 0;
 }
 .nav-bar {
   display: inline-flex;
-  flex-direction: ;
   list-style-type: none;
   margin: .5rem;
   text-align: center;
-  font-size: 1.4rem;
-
+  font-size: 1.8rem;
+  font-family: serif;
 }
 
 .top-right {
-  display: flex;
+  text-align: right;
 }
 
 .login {
   font-size: .7rem;
   text-decoration: none;
   margin: .3rem;
-  display: flex;
-  align-items: flex-start
+  text-align: right;
 }
 
 .cart {
-  display: flex;
   margin: .2rem;
 }
 
 .search-bar {
-  display: flex;
   margin: .2rem;
 }
 
+
+
 .ties {
-  display: flex;
-  /*flex: initial;*/
-  width: 100%;
-  height: 20rem;
-  border: 1px solid black;
   position: relative;
-
-
+  background-color: #f4f4f4;
 }
 
 .tie-pics {
-  /*transform: scale(.6);*/
   display: flex;
-  margin: 0;
-  padding: 0;
-  top: 0%;
-  position: absolute;
-  transform: translate(3%, 0%);
-  min-width: 10rem;
-
+  text-align: center;
 }
 
-.tie-types {
-  display: flex;
-  position: sticky;
-  top: 100%;
+.slogan {
+  margin: 2rem 1rem;
+  font-size: 3.7rem;
+  text-align: center;
 }
+
+
+
 
 .tiles {
-  display: flex;
   width: 100%;
-  height: 33vh;
   background-color: blue;
-  border: 1px solid black;
+  display: flex;
 }
 
 .bow-ties {
   display: flex;
   width: 25%;
-  height: 23vh;
-  background-color: green;
-  justify-content: flex-start;
   flex-direction: row;
   margin: 2rem;
   align-items: center;
@@ -138,9 +132,6 @@ nav {
 .pocket-squares {
   display: flex;
   width: 25%;
-  height: 23vh;
-  background-color: purple;
-  justify-content: ;
   flex-direction: row;
   margin: 2rem;
   align-items: center;
@@ -149,13 +140,12 @@ nav {
 .tie-bars {
   display: flex;
   width: 25%;
-  height: 23vh;
-  background-color: orange;
-  justify-content: flex-end;;
   flex-direction: row;
   margin: 2rem;
   align-items: center;
 }
+
+
 
 .story {
   text-align: center;
