--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav {
 
 
 .tiles {
-  width: 100%;
+
   background-color: blue;
   display: flex;
 }
@@ -149,60 +149,94 @@ nav {
 
 .story {
   text-align: center;
-  height: 12rem;
-  background: gray;
   padding: 5% 5%;
+  margin: 1rem;
 }
 
 .story--link {
   text-decoration: none;
   color: blue;
-  height: 2rem;
   margin: 1rem;
+
 }
 .story--link:hover {
   color: #56c71a;
   font-size: 1.1rem;
+
 }
 
 footer {
   width: 100%;
-  background-color: red;
+  /*background-color: red;*/
   display: flex;
   border-top: dotted 2px;
   /*padding-top: 1.5rem;*/
+  position: relative;
+  justify-content: space-between;
+}
+
+h3 {
+  margin: .5rem;
+}
+
+.footer-p {
+  margin: .3rem;
 }
 
 .wkpick {
-  display: flex;
-  flex-direction: row;
-  height: 12rem;
   width: 12rem;
-  border: black solid 2px;
 }
 
 .loop {
-  display: flex;
-  flex-direction: row;
-  height: 12rem;
   width: 12rem;
-  border: black solid 2px;
+}
+
+.icons {
+  display: flex;
+  width: 3rem;
+  height: 3rem;
+
 }
 
 .quarter {
-  display: flex;
-  flex-direction: row;
-  height: 12rem;
   width: 12rem;
-  border: black solid 2px;
+  /*margin: 1rem:*/
 }
 
+.quarter-search {
+  width: 11rem;
+  height: 1.5rem;
+  margin: .8rem;
+  padding: .2rem;
+  font-size: .8rem;
+
+  border: gray 1px solid;
+  opacity: .5;
+  border-radius: 5%;
+  -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.55);
+  -moz-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.55);
+  box-shadow: 1px 0px 1px 1px #919191;
+}
+
+.sub {
+  margin:.3rem;
+  padding: .3rem;
+
+  border: #205add solid 1px;
+  border-radius: 10%;
+
+  background: #205add;
+  color: white;
+  font-size: .8rem;
+}
 .guide {
-  display: flex;
-  flex-direction: row;
-  height: 12rem;
   width: 12rem;
-  border: black solid 2px;
+  font-family: Arial;
+}
+
+.knot {
+  text-decoration: none;
+
 }
 
 .bottom--nav {
