--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ nav {
 .ties {
   position: relative;
   background-color: #f4f4f4;
+
 }
 
 .tie-pics {
@@ -116,47 +117,68 @@ nav {
 
 
 .tiles {
-
-  background-color: blue;
+  flex-direction: row;
   display: flex;
+  justify-content: center;
 }
 
 .bow-ties {
   display: flex;
   width: 25%;
-  flex-direction: row;
-  margin: 2rem;
+  margin: 2rem .5rem;
   align-items: center;
+  position: relative;
+  /*justify-content: space-between;*/
 }
 
 .pocket-squares {
   display: flex;
   width: 25%;
-  flex-direction: row;
-  margin: 2rem;
+  margin: 2rem .5rem;
   align-items: center;
+  position: relative;
+  /*justify-content: space-between;*/
 }
 
 .tie-bars {
   display: flex;
   width: 25%;
-  flex-direction: row;
-  margin: 2rem;
+  margin: 2rem .5rem;
   align-items: center;
+  position: relative;
+  /*justify-content: space-between;*/
 }
 
-
+.tiles-p1 {
+  position: absolute;
+  top: 5%;
+  right:5%;
+  font-size: 1.3rem;
+}
+.tiles-p2 {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 1.3rem;
+  text-align: right;
+}
+.tiles-p3 {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 1.3rem;
+}
 
 .story {
   text-align: center;
-  padding: 5% 5%;
-  margin: 1rem;
+  margin: 3rem;
 }
 
 .story--link {
   text-decoration: none;
   color: blue;
   margin: 1rem;
+  padding: .5rem;
 
 }
 .story--link:hover {
@@ -167,12 +189,14 @@ nav {
 
 footer {
   width: 100%;
-  /*background-color: red;*/
   display: flex;
   border-top: dotted 2px;
-  /*padding-top: 1.5rem;*/
   position: relative;
-  justify-content: space-between;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: center;
 }
 
 h3 {
@@ -185,22 +209,25 @@ h3 {
 
 .wkpick {
   width: 12rem;
+  margin: 2rem
 }
 
 .loop {
   width: 12rem;
+  margin: 2rem;
 }
 
 .icons {
   display: flex;
   width: 3rem;
   height: 3rem;
+  float: left;
 
 }
 
 .quarter {
   width: 12rem;
-  /*margin: 1rem:*/
+  margin: 2rem;
 }
 
 .quarter-search {
@@ -232,93 +259,99 @@ h3 {
 .guide {
   width: 12rem;
   font-family: Arial;
+  margin: 2rem;
 }
 
 .knot {
   text-decoration: none;
-
 }
 
 .bottom--nav {
   display: flex;
   flex-direction: row;
   min-width: 10rem;
-  margin-right: 40rem;
+
+  display: flex;
+  width: 100%;
+  border: black solid 2px;
+  padding-top: 1rem;
+  list-style-type: none;
+  text-align: right;
+
+
+}
+.contained {
+  display: flex;
 
 }
 
 .shop {
-  display: flex;
-  flex-direction: column;
-  height: 8rem;
-  width: 8rem;
-  border: black solid 2px;
   list-style-type: none;
-  justify-content: flex-end;
+
+}
+.shop--head {
+  font-size: 1rem;
 }
 
 .shop--li {
   list-style-type: none;
-  margin: .5rem .5rem .6rem 0;
-  justify-content: flex-end;
   font-size: .8rem;
   text-align: left;
+  padding-left: 0;
 }
 
 .about {
-  display: flex;
-  flex-direction: column;
-  height: 8rem;
-  width: 8rem;
-  border: black solid 2px;
-  padding-top: 1rem;
-  list-style-type: none;
-  justify-content: flex-end;
+  text-align: center;
+
 }
 
-.about--us {
+.about--head {
+  font-size: 1rem;
+}
+
+.about--li {
   list-style-type: none;
-  margin: .5rem .5rem .6rem 0;
-  justify-content: flex-end;
   font-size: .8rem;
   text-align: left;
 }
 
 .style {
-  display: flex;
-  flex-direction: column;
-  height: 8rem;
-  width: 8rem;
-  border: black solid 2px;
-  padding-top: 1rem;
   list-style-type: none;
-  justify-content: flex-end;
 
 }
 
-.style--guide {
+.style--head {
+  font-size: 1rem;
+}
+
+.style--li {
   list-style-type: none;
-  margin: .5rem .5rem .6rem 0;
-  justify-content: flex-end;
   font-size: .8rem;
   text-align: left;
 }
 
-.help {
-  display: flex;
-  flex-direction: column;
-  height: 8rem;
-  width: 8rem;
-  border: black solid 2px;
-  padding-top: 1rem;
-  list-style-type: none;
-  justify-content: flex-end;
+
+.help--head {
+  font-size: 1rem;
 }
 
 .help--li {
   list-style-type: none;
-  margin: .5rem .5rem .6rem 0;
-  justify-content: flex-end;
   font-size: .8rem;
   text-align: left;
+}
+
+.right-box {
+  display: flex;
+  flex-direction: column;
+  border: gray 1 px solid;
+  background-color: gray;
+  padding: 1rem;
+  width: 20%;
+
+}
+
+.cont-btn {
+  display: flex;
+
 }
