--- a/style.css
+++ b/style.css
@@ -1,396 +1,355 @@
 * {
-  box-sizing: border-box;
-  margin: 0 auto;
+    box-sizing: border-box;
+    margin: 0 auto;
 }
-
 img {
-  max-width: 100%;
+    max-width: 100%;
 }
-
-.container {
-  width: 100%;
-  max-width: 60rem;
-  margin: auto;
-  overflow: auto;
-}
-
 header {
-  background-color: #f5672b;
-  display: flex;
-  height: 2.2rem;
-  position: relative;
+    background-color: #f5672b;
+    display: flex;
+    height: 2.2rem;
+    align-items: center;
 }
-
 .free-shipping {
-  margin: .3rem .5rem .5rem 5rem;
-  background-color: #a43239;
-  color: white;
-  width: 7rem;
-  height: 1.5rem;
-  border: 1px #f5672b solid;
-  border-radius: 8%;
-  font-size: .75rem;
-  opacity: .8;
-  display: inline;
-  position: absolute;
-  left: 5%;
+    margin: .3rem .5rem .5rem 5rem;
+    background-color: #c7532c;
+    color: white;
+    width: 7rem;
+    height: 1.5rem;
+    border: 1px #c7532c solid;
+    border-radius: 8%;
+    font-size: .75rem;
+    opacity: .8;
+    display: flex;
 }
-
 .page-top {
-  padding: .5rem;
+    padding: .5rem;
+    display: flex;
+    margin: 0;
 }
-
 .top-of-page {
-  display: inline;
-  list-style-type: none;
-  margin: 2rem .5rem;
-  color: white;
-  font-family: Verdana;
-  font-size: .85rem;
+    display: flex;
+    margin: 0 .5rem;
+    color: white;
+    font-family: Verdana;
+    font-size: .85rem;
 }
-
-
-
-
 nav {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
 .logo {
-  position: relative;
-  margin-right: 0;
+    position: relative;
+    margin: 0 2rem 0 5rem;
 }
-
-.tie-select{
-  display: flex;
-  margin: 0;
+.tie-select {
+    display: flex;
+    margin: 0;
 }
 .nav-bar {
-  display: inline-flex;
-  list-style-type: none;
-  margin: .5rem;
-  text-align: center;
-  font-size: 1.8rem;
-  font-family: serif;
+    display: inline-flex;
+    list-style-type: none;
+    margin: .5rem 1.5rem;
+    text-align: center;
+    font-size: 1.8rem;
+    font-family: serif;
 }
-
+.nav-right {
+    margin-right: 1rem;
+    width: 20%;
+}
 .top-right {
-  text-align: right;
+    text-align: right;
+    margin-right:
 }
-
+.bottom-right {
+    width: 100%;
+}
 .login {
-  font-size: .7rem;
-  text-decoration: none;
-  margin: .3rem;
-  text-align: right;
+    font-size: 1rem;
+    text-decoration: none;
+    margin: .3rem;
+    text-align: right;
 }
-
 .cart {
-  margin: .2rem;
+    margin: 0 1rem 0 0;
+    padding: .5rem;
+    width: 35%;
+    height: 2.8rem;
+    background: white;
+    font-size: 1.3rem;
+    color: #666;
+    text-align: center;
+    border: 2px solid #bbb;
+    border-radius: 5%;
 }
-
 .search-bar {
-  margin: .2rem;
+    margin: .2rem;
+    width: 55%;
+    margin: 0;
+    height: 2.3rem;
+    font-size: 1rem;
+    text-align: left;
+    color: #666;
+    background: white;
+    border: 2px solid #bbb;
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(240, 235, 231, 1);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(240, 235, 231, 1);
+    box-shadow: 0px 0px 5px 5px rgba(240, 235, 231, 1);
 }
-
-.tie-pics {
-  display: flex;
-  text-align: center;
-}
-
 .ties {
-  position: relative;
-  background-color: #f4f4f4;
-
+    position: relative;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
 }
-
+.container {
+    width: 100%;
+    max-width: 80rem;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: auto;
+}
+.tie-pics {
+    display: flex;
+    text-align: center;
+    width: 100%;
+    margin: 0 0;
+}
+.tie {
+    margin: 0 1.1rem;
+}
 .tie:hover {
-  width: 10%;
-  transition:width 1s ease;
+    transform: scale(1.3);
 }
-
 .slogan {
-  margin: 2rem 1rem;
-  font-size: 3.7rem;
-  text-align: center;
+    margin: 3rem 1rem;
+    font-size: 4rem;
+    text-align: center;
 }
-
-
-
-
 .tiles {
-  flex-direction: row;
-  display: flex;
-  justify-content: center;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
 }
-
 .bow-ties {
-  display: flex;
-  width: 25%;
-  margin: 2rem .5rem;
-  align-items: center;
-  position: relative;
-  /*justify-content: space-between;*/
+    display: flex;
+    width: 25%;
+    margin: 2rem .5rem;
+    align-items: center;
+    position: relative;
+    /*justify-content: space-between;*/
 }
-
 .pocket-squares {
-  display: flex;
-  width: 25%;
-  margin: 2rem .5rem;
-  align-items: center;
-  position: relative;
-  /*justify-content: space-between;*/
+    display: flex;
+    width: 25%;
+    margin: 2rem .5rem;
+    align-items: center;
+    position: relative;
+    /*justify-content: space-between;*/
 }
-
 .tie-bars {
-  display: flex;
-  width: 25%;
-  margin: 2rem .5rem;
-  align-items: center;
-  position: relative;
-  /*justify-content: space-between;*/
+    display: flex;
+    width: 25%;
+    margin: 2rem .5rem;
+    align-items: center;
+    position: relative;
+    /*justify-content: space-between;*/
 }
-
 .tiles-p1 {
-  position: absolute;
-  top: 5%;
-  right:5%;
-  font-size: 1.3rem;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 1.3rem;
 }
 .tiles-p2 {
-  position: absolute;
-  top: 5%;
-  right: 5%;
-  font-size: 1.3rem;
-  text-align: right;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 1.3rem;
+    text-align: right;
 }
 .tiles-p3 {
-  position: absolute;
-  top: 5%;
-  right: 5%;
-  font-size: 1.3rem;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 1.3rem;
 }
-
 .story {
-  text-align: center;
-  margin: 3rem;
+    text-align: center;
+    margin: 3rem;
 }
-
 .story--link {
-  text-decoration: none;
-  color: blue;
-  margin: 1rem;
-  padding: .5rem;
-
+    text-decoration: none;
+    color: blue;
+    margin: 1rem;
+    padding: .5rem;
 }
 .story--link:hover {
-  color: #56c71a;
-  font-size: 1.1rem;
-
+    color: #56c71a;
+    font-size: 1.1rem;
 }
-
 footer {
-  width: 100%;
-  display: flex;
-  border-top: dotted 2px;
-  position: relative;
+    width: 100%;
+    display: flex;
+    border-top: dotted 2px;
+    position: relative;
 }
-
 .footer-inner {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-
 h3 {
-  margin: .5rem;
+    margin: .5rem;
 }
-
 .footer-p {
-  margin: .3rem;
+    margin: .3rem;
 }
-
 .wkpick {
-  width: 12rem;
-  margin: 2rem
+    width: 12rem;
+    margin: 2rem
 }
-
 .loop {
-  width: 12rem;
-  margin: 2rem;
+    width: 12rem;
+    margin: 2rem;
 }
-
 .icons {
-  display: flex;
-  width: 3rem;
-  height: 3rem;
-  float: left;
-
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    float: left;
 }
-
 .quarter {
-  width: 12rem;
-  margin: 2rem;
+    width: 12rem;
+    margin: 2rem;
 }
-
 .quarter-search {
-  width: 11rem;
-  height: 1.5rem;
-  margin: .8rem;
-  padding: .2rem;
-  font-size: .8rem;
-
-  border: gray 1px solid;
-  opacity: .5;
-  border-radius: 5%;
-  -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.55);
-  -moz-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.55);
-  box-shadow: 1px 0px 1px 1px #919191;
+    width: 11rem;
+    height: 1.5rem;
+    margin: .8rem;
+    padding: .2rem;
+    font-size: .8rem;
+    border: gray 1px solid;
+    opacity: .5;
+    border-radius: 5%;
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.55);
+    box-shadow: 1px 0px 1px 1px #919191;
 }
-
 .sub {
-  margin:.3rem;
-  padding: .3rem;
-
-  border: #205add solid 1px;
-  border-radius: 10%;
-
-  background: #205add;
-  color: white;
-  font-size: .8rem;
+    margin: .3rem;
+    padding: .3rem;
+    border: #205add solid 1px;
+    border-radius: 10%;
+    background: #205add;
+    color: white;
+    font-size: .8rem;
 }
 .guide {
-  width: 12rem;
-  font-family: Arial;
-  margin: 2rem;
+    width: 12rem;
+    font-family: Arial;
+    margin: 2rem;
 }
-
 .knot {
-  text-decoration: none;
+    text-decoration: none;
 }
-
 .bottom--nav {
-  display: flex;
-  justify-content: space-between;
-  min-width: 10rem;
-  background: #f4f4f4;
-
-  width: 100%;
-  padding-top: 1rem;
-  list-style-type: none;
-  text-align: right;
+    display: flex;
+    justify-content: space-between;
+    min-width: 10rem;
+    background: #f4f4f4;
+    width: 100%;
+    padding-top: 1rem;
+    list-style-type: none;
+    text-align: right;
 }
 .contained {
-  display: flex;
-
+    display: flex;
 }
-
 .shop {
-  list-style-type: none;
-
+    list-style-type: none;
 }
 .shop--head {
-  font-size: 1rem;
+    font-size: 1rem;
 }
-
 .shop--li {
-  list-style-type: none;
-  font-size: .8rem;
-  text-align: left;
-  padding-left: 0;
+    list-style-type: none;
+    font-size: .8rem;
+    text-align: left;
+    padding-left: 0;
 }
-
 .about {
-  text-align: center;
-
+    text-align: center;
 }
-
 .about--head {
-  font-size: 1rem;
+    font-size: 1rem;
 }
-
 .about--li {
-  list-style-type: none;
-  font-size: .8rem;
-  text-align: left;
+    list-style-type: none;
+    font-size: .8rem;
+    text-align: left;
 }
-
 .style {
-  list-style-type: none;
-
+    list-style-type: none;
 }
-
 .style--head {
-  font-size: 1rem;
+    font-size: 1rem;
 }
-
 .style--li {
-  list-style-type: none;
-  font-size: .8rem;
-  text-align: left;
+    list-style-type: none;
+    font-size: .8rem;
+    text-align: left;
 }
-
-
 .help--head {
-  font-size: 1rem;
+    font-size: 1rem;
 }
-
 .help--li {
-  list-style-type: none;
-  font-size: .8rem;
-  text-align: left;
+    list-style-type: none;
+    font-size: .8rem;
+    text-align: left;
 }
-
 .right-box {
-  border: #a2afc0 1px solid;
-  background-color: #a2afc0;
-  padding: 1.2rem;
-  width: 30%;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-
+    border: #a2afc0 1px solid;
+    background-color: #a2afc0;
+    padding: 1.2rem;
+    width: 30%;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
 }
-
 .right-text {
-  color: #fff;
-  width: 100%;
-  text-align: left;
+    color: #fff;
+    width: 100%;
+    text-align: left;
 }
 .contain-stuff {
-  display: flex;
-  margin: .5rem;
+    display: flex;
+    margin: .5rem;
 }
-
 .email_num {
-  width: 90%;
-  color: white;
-  text-align: left;
-
+    width: 90%;
+    color: white;
+    text-align: left;
 }
-
 .btn {
-  width: 100%;
-  /*background: blue;*/
+    width: 100%;
+    /*background: blue;*/
 }
-
 .cont-btn {
-  background: #33a1ff;
-  border-radius: 5%;
-  border: #2b89da 1px solid;
-  color: white;
-  padding: .5rem;
-  font-size: 1.3rem;
-  display: flex;
-
-
+    background: #33a1ff;
+    border-radius: 5%;
+    border: #2b89da 1px solid;
+    color: white;
+    padding: .5rem;
+    font-size: 1.3rem;
+    display: flex;
 }
-
-
-
 h6 {
-  display: flex;
-  flex-direction: row;
-  padding-left: 8rem;
-  background: #f4f4f4;
+    display: flex;
+    flex-direction: row;
+    padding-left: 8rem;
+    background: #f4f4f4;
 }
